# amd-hybrid-router

./: .dockerignore  .env.example  .gitignore  CHECKLIST_SUBMISSAO.md  Dockerfile.scoring  README.md  SUBMISSION_PLAN.md  VIDEO_SCRIPT.md  docker-compose.yml  pyproject.toml  start.sh
amd_hybrid_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/: cli.py  eval.py  main.py  metrics.py  router.py  schemas.py  security.py
app/dashboard/: index.html  playground.html
app/providers/: base.py  fireworks_provider.py  ninerouter_provider.py  ollama_provider.py
